# SimpleFileHash

./: CMakeLists.txt  README.md  SimpleFileHash_en.ts  SimpleFileHash_es.ts  SimpleFileHash_fr.ts  SimpleFileHash_ko.ts  SimpleFileHash_pl.ts  SimpleFileHash_sv.ts  aboutdialog.cpp  aboutdialog.hpp  aboutdialog.ui  algocheckbox.cpp  algocheckbox.hpp  contextinstall.cpp  contextinstall.hpp  filehashapplication.cpp  filehashapplication.hpp  hashalgo.cpp  hashalgo.hpp  hashingjob.cpp  hashingjob.hpp  hashmatchmodel.cpp  hashmatchmodel.hpp  hashmatchwindow.cpp  hashmatchwindow.hpp  hashmatchwindow.ui  hashprogressitemdelegate.cpp  hashprogressitemdelegate.hpp  hashtask.cpp  hashtask.hpp  hashtaskreporter.cpp  hashtaskreporter.hpp  hashtasksmodel.cpp  hashtasksmodel.hpp  hashtasktag.cpp  hashtasktag.hpp  images.qrc  main.cpp  mainwindow.cpp  mainwindow.hpp  (+13 more)
md6/: md6.hpp  md6_compress.cpp  md6_mode.cpp
tests/: CMakeLists.txt  LargeBlock1.txt  LargeBlock2.txt  TestBlock.txt  TestBlock1.txt  TestBlock2.txt  TestBlock3.txt  TestBlock4.txt  TestBlock5.txt  TestHashAlgo.cpp  TestHashTask.cpp  TestHashTasksModel.cpp  TestHashThreadComm.cpp  TestHashingJob.cpp
